[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/img/ground.svg" type="Texture" id=1]
[ext_resource path="res://scripts/bullet.gd" type="Script" id=2]

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.845455 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array(  )
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 15.1093, 6.16477 )

[node name="bullet" type="Node2D"]
script = ExtResource( 2 )

[node name="pre_line" type="Line2D" parent="."]
width = 3.0
width_curve = SubResource( 7 )
default_color = Color( 0.164706, 0.909804, 0.988235, 1 )
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 20

[node name="pre_line_transparent" type="Tween" parent="."]

[node name="Path2D" type="Path2D" parent="."]
position = Vector2( 0.187286, 0 )
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( 0.866165, -0.100445 )
scale = Vector2( 1, 1.6 )
loop = false

[node name="sprite" type="Sprite" parent="Path2D/PathFollow2D"]
modulate = Color( 0.494118, 0, 0, 1 )
position = Vector2( 7.86247e-06, -1.64969e-07 )
scale = Vector2( 0.425645, 0.0592454 )
texture = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Path2D/PathFollow2D/sprite"]
rotation = 3.14159
scale = Vector2( 0.619029, 2.28235 )

[node name="Area2D" type="Area2D" parent="Path2D/PathFollow2D/sprite" groups=[
"player_bullet",
]]
scale = Vector2( 0.802304, 2.95808 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D/PathFollow2D/sprite/Area2D"]
shape = SubResource( 6 )
[connection signal="screen_exited" from="Path2D/PathFollow2D/sprite/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="Path2D/PathFollow2D/sprite/Area2D" to="." method="_on_Area2D_body_entered"]
